# org_timeviz

./: .gitignore  Makefile  README.md  environment.yaml  pyproject.toml
configs/: default.yaml
entry_point/: generate_reports.py
org_timeviz/: __init__.py  aggregate.py  calendar_view.py  config.py  emacs_agenda.py  emacs_batch.py  filters.py  index_html.py  logging_utils.py  models.py  org_parser.py  other_catalogue.py  plots.py  reports.py  time_bucket_resolver.py  time_buckets.py  time_windows.py
org_timeviz/elisp/: org_timeviz_export.el
tools/: report_time_bucket_violations.py
